k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-gitops
  namespace: new-hello-gitops
spec:
  replicas: 5
  selector:
    matchLabels:
      app: hello-gitops
  template:
    metadata:
      labels:
        app: hello-gitops
    spec:
      containers:
        - name: hello-gitops
          image: new-hello-gitops:latest
          ports:
            - name: http
              containerPort: 8050
