k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-gitops
  namespace: new-hello-gitops
spec:
  selector:
    app: hello-gitops
  type: NodePort
  ports:
    - name: http
      port: 8050
      targetPort: 8050
      nodePort: 30080
